--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -1365,6 +1365,7 @@ body.Profile #Panel {
 .ProfileFields dl dt {
    float: left;
    width: 120px;
+   padding-left: 8px;
    overflow: hidden;
    white-space: nowrap;
    border-bottom: 1px solid #BEC8CC;
