update orchid theme

--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -63,9 +63,9 @@ a {
 .GuestBox {
 	margin:0 0 10px 0;
 	padding:5px 10px;
-	background:#F9F9F9;
-	border-radius:5px;
-	border:1px solid #EEE;
+	background:white;
+	box-shadow: 0 0 10px 0 #e2e2e2;
+	border: 1px solid #DDD;
 }
 
 #Content {
@@ -136,6 +136,10 @@ h1.HomepageTitle {
 
 .Count {
 	background:#B7B7B7;
+}
+
+.Item .Author a {
+	color:#777;
 }
 
 /*a.Bookmarked, a.Bookmarked:hover {
