--- a/themes/orchid/design/custom.css
+++ b/themes/orchid/design/custom.css
@@ -56,9 +56,9 @@ a {
 .GuestBox {
   margin: 0 0 10px 0;
   padding: 5px 10px;
-  background: #F9F9F9;
-  border-radius: 5px;
-  border: 1px solid #EEE;
+  background: white;
+  box-shadow: 0 0 10px 0 #e2e2e2;
+  border: 1px solid #DDD;
 }
 #Content {
   padding: 10px 10px;
@@ -140,6 +140,9 @@ h1.HomepageTitle {
 }
 .Count {
   background: #B7B7B7;
+}
+.Item .Author a {
+  color: #777;
 }
 /*a.Bookmarked, a.Bookmarked:hover {
 	background-position: -54px -28px;
