--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -18,19 +18,29 @@ a {
 	padding-bottom:8px;
 	margin-bottom:25px;
 	border-bottom: 1px solid #C8C8C8;
+	.Row {overflow: hidden;}
 	a {
 		color:#333;
 		font-weight: normal;
 	}
-	.SiteTitle {
-		a {color:#E65E8D;}
-		font-size:20px;
+	.SiteTitle a {
+		color:#E65E8D;
+		float:left;
+		width:149px;
+		height:31px;
+		background-image: url(logo.png);
+		display:inline-block;
+		text-indent:-9999px;
+		font-size:0;
+		line-height:0;
 		font-family: Tahoma, Arial, Helvetica, STHeiti;
 	}
 }
 
 #Head .SiteMenu {
-	margin-left:10px;
+	margin-left:20px;
+	padding-top: 9px;
+	float: left;
 	a {
 		font-size:14px;
 		&.Selected {
