--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -93,6 +93,9 @@ h1.HomepageTitle {
 	color:#4D4D4D;
 	font-weight: normal;
 	font-size: 130%;
+	padding: 5px 10px;
+	margin:0;
+	background: #F2F2F2;
 }
 
 .Discussion {
@@ -104,10 +107,8 @@ h1.HomepageTitle {
 	}
 }
 
-h1.HomepageTitle {
-	padding: 5px 10px;
-	margin:0;
-	background: #F2F2F2;
+.Discussion .PageTitle h1 {
+	font-weight: normal;
 }
 
 #Panel .FilterMenu ,.PanelInfo {
