--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -153,6 +153,10 @@ h1.HomepageTitle {
 	color:#777;
 }
 
+#dashboard_entry_signin #Content {
+	overflow:hidden;
+}
+
 /*a.Bookmarked, a.Bookmarked:hover {
 	background-position: -54px -28px;
 }*/
