add pager style

--- a/themes/orchid/design/custom.css
+++ b/themes/orchid/design/custom.css
@@ -8,6 +8,29 @@ a {
   color: #8B920A;
   font-weight: normal;
 }
+.PagerWrap {
+  background: #F6F6F6;
+  padding: 2px 0;
+}
+.PagerWrap .Pager {
+  float: left;
+}
+.PagerWrap .Pager a,
+.PagerWrap .Pager span {
+  font-size: 14px;
+  padding: 1px 5px;
+  border: 1px #eee solid;
+  line-height: 20px;
+  background: white;
+  display: inline-block;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+.PagerWrap .Pager a.Highlight,
+.PagerWrap .Pager span.Highlight {
+  color: #777;
+}
 .HasNew {
   background-color: #FFF87F;
 }
