--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -11,6 +11,28 @@ a {
 	font-weight:normal;
 }
 
+.PagerWrap {
+	background: #F6F6F6;
+	padding:2px 0;
+	.Pager {
+		float:left;
+		a,span {
+			&.Highlight {
+				color:#777;
+			}
+			font-size:14px;
+			padding:1px 5px;
+			border:1px #eee solid;
+			line-height:20px;
+			background:white;
+			display:inline-block;
+			-webkit-border-radius: 3px;
+			-moz-border-radius: 3px;
+			border-radius: 3px;
+		}
+	}
+}
+
 .HasNew {
 	background-color:#FFF87F;
 }
