--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -94,6 +94,10 @@ a {
 	border: 1px solid #DDD;
 }
 
+.PageDescription {
+	padding:0 10px;
+}
+
 #Content {
 	padding:10px 10px;
 	background:white;
