--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -187,6 +187,22 @@ h1.HomepageTitle {
 	overflow:hidden;
 }
 
+#Foot {
+	overflow:hidden;
+}
+
+#power-by {
+	float:left;
+}
+
+#friend-links {
+	float:right;
+	color:#CCC;
+	a {
+		color:#B7B7B7;
+	}
+}
+
 /*a.Bookmarked, a.Bookmarked:hover {
 	background-position: -54px -28px;
 }*/
