--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -176,6 +176,12 @@ h1.HomepageTitle {
 	overflow:hidden;
 }
 
+h2.CommentHeading {
+	border-radius: 3px;
+	background: #EEE;
+	padding: 3px 10px;
+}
+
 /*a.Bookmarked, a.Bookmarked:hover {
 	background-position: -54px -28px;
 }*/
