--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -172,6 +172,10 @@ h1.HomepageTitle {
 	color:#777;
 }
 
+.Discussions .Item {
+	background:#FFF;
+}
+
 #dashboard_entry_signin #Content {
 	overflow:hidden;
 }
