update style for tags

--- a/themes/orchid/design/custom.css
+++ b/themes/orchid/design/custom.css
@@ -184,6 +184,15 @@ h2.CommentHeading {
   background: #EEE;
   padding: 3px 10px;
 }
+.TagCloud li span a {
+  color: #888;
+}
+.TagCloud .Count {
+  border: 1px solid #DDD;
+  color: #AAA;
+  background: white;
+  padding: 0 .8ex;
+}
 /*a.Bookmarked, a.Bookmarked:hover {
 	background-position: -54px -28px;
 }*/
