--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -78,9 +78,9 @@ a {
 	}
 }
 
-.ItemContent.Discussion {
+/*.ItemContent.Discussion {
 	overflow:hidden;
-}
+}*/
 
 .Box {
 	margin: 15px 0;
@@ -94,8 +94,16 @@ a {
 	border: 1px solid #DDD;
 }
 
+.UserBox, .MeBox {
+	margin-top:0;
+}
+
 .PageDescription {
 	padding:0 10px;
+}
+
+.PageControls.Top {
+	display:none;
 }
 
 #Content {
@@ -115,12 +123,20 @@ h1.HomepageTitle {
 	font-size: 130%;
 }
 
-.Discussion {
+ul.Discussions {
 	.Title a {
-		color:#333;
+		color:#000;
 	}
 	.Meta a {
 		color:#8B920A;
+	}
+	li img {
+		width:40px;
+		height:40px;
+	}
+	.Item {
+		background:#FFF;
+		padding:8px 8px 3px;
 	}
 }
 
@@ -170,10 +186,6 @@ h1.HomepageTitle {
 
 .Item .Author a {
 	color:#777;
-}
-
-.Discussions .Item {
-	background:#FFF;
 }
 
 #dashboard_entry_signin #Content {
