--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -192,6 +192,10 @@ h1.HomepageTitle {
 	overflow:hidden;
 }
 
+.Discussion .PageTitle h1 {
+	font-weight: normal;
+}
+
 h2.CommentHeading {
 	border-radius: 3px;
 	background: #EEE;
