--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -146,6 +146,10 @@ h1.HomepageTitle {
 	background: #F2F2F2;
 }
 
+#vanilla_discussions_index .PageDescription {
+	display:none;
+}
+
 #Panel .FilterMenu ,.PanelInfo {
 	li {
 		border-bottom:1px dashed #D0D0D0;
