--- a/themes/orchid/design/custom.css
+++ b/themes/orchid/design/custom.css
@@ -130,6 +130,9 @@ h1.HomepageTitle {
   margin: 0;
   background: #F2F2F2;
 }
+#vanilla_discussions_index .PageDescription {
+  display: none;
+}
 #Panel .FilterMenu li,
 .PanelInfo li {
   border-bottom: 1px dashed #D0D0D0;
