--- a/themes/orchid/design/custom.less
+++ b/themes/orchid/design/custom.less
@@ -11,9 +11,10 @@ a {
 	font-weight:normal;
 }
 
-.PagerWrap {
+.PageControls {
 	background: #F6F6F6;
-	padding:2px 0;
+	padding:5px 10px 8px;
+	margin:0;
 	.Pager {
 		float:left;
 		a,span {
